Set side bar minimum to avoid odd text wrapping

--- a/ActivitySchedulerFrontEnd/wwwroot/css/site.css
+++ b/ActivitySchedulerFrontEnd/wwwroot/css/site.css
@@ -156,6 +156,7 @@ app {
     }
 
     .sidebar {
+        min-width: 225px;
         width: 250px;
         height: 100vh;
         position: sticky;
